test_suite/alan-2022-examples/failing/002480_mutation.alan
source l begin f2 :=] 23 end
